update on employment and about pages

--- a/alumni.html
+++ b/alumni.html
@@ -2,16 +2,12 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Home - Brenitoch</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Brenitoch</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Alumni - Breinitoch School</title>
+  <meta name="description"
+    content="Connect with Breinitoch School's alumni community. Stay engaged, share your success, and support the next generation of leaders.">
+  <meta name="keywords" content="Breinitoch alumni, school alumni network, alumni events, alumni stories">
 
   <!-- Favicons -->
   <link href="assets/img/logoo.png" rel="icon">
@@ -42,27 +38,25 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logoo.png" alt="School Logo">
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li class="dropdown"><a href="about.html"><span>About</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="students-life.html">Student Life</a></li>
-              <li><a href="campus-facilities.html">Co-curricular Programs</a></li>
-
+              <li><a href="faculty-staff.html">Faculty &amp; Staff</a></li>
+              <li><a href="campus-facilities.html">Campus Facilities</a></li>
             </ul>
           </li>
-
           <li><a href="admissions.html">Admissions</a></li>
           <li><a href="academics.html">Academics</a></li>
           <li><a href="events.html">Events</a></li>
-          <li><a href="alumni.html">Alumni</a></li>
+          <li><a href="alumni.html" class="active">Alumni</a></li>
           <li><a href="employ.html">Employment</a></li>
           <li class="dropdown"><a href="#"><span>More Pages</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -77,7 +71,6 @@
               <li><a href="feedback.html">Feedback and Surveys</a></li>
             </ul>
           </li>
-
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -86,13 +79,12 @@
     </div>
   </header>
 
-
   <main class="main">
 
     <!-- Page Title -->
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
-        <h1>Brenitoch Alumni</h1>
+        <h1>Breinitoch Alumni</h1>
         <p>Celebrating future leaders — building a legacy that starts with our very first graduates.</p>
         <nav class="breadcrumbs">
           <ol>
@@ -107,15 +99,15 @@
     <section id="alumni" class="alumni section">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <!-- Alumni Vision -->
+        <!-- Alumni Hero -->
         <div class="alumni-hero">
           <div class="row align-items-center">
             <div class="col-lg-7" data-aos="fade-up" data-aos-delay="200">
               <div class="hero-content">
-                <span class="alumni-badge">Brenitoch Legacy</span>
+                <span class="alumni-badge">Breinitoch Legacy</span>
                 <h2>Laying the Foundation for a Lifelong Community</h2>
                 <p>
-                  At Brenitoch School, we believe that education goes far beyond the classroom.
+                  At Breinitoch School, we believe that education goes far beyond the classroom.
                   As we prepare to welcome our first students in 2026, we’re already nurturing
                   the spirit of community, excellence, and lifelong connection that will define
                   our alumni network for generations to come.
@@ -139,7 +131,8 @@
             <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="300">
               <div class="hero-image-wrapper">
                 <div class="hero-image">
-                  <img src="assets/img/education/campus-5.webp" alt="Future Brenitoch Alumni" class="img-fluid rounded">
+                  <img src="assets/img/education/campus-5.webp" alt="Future Breinitoch Alumni"
+                    class="img-fluid rounded">
                 </div>
               </div>
             </div>
@@ -147,13 +140,26 @@
         </div>
 
         <!-- Alumni Vision Section -->
+        <div class="alumni-vision mt-5">
+          <div class="section-header text-center" data-aos="fade-up" data-aos-delay="100">
+            <h3>Our Alumni Vision</h3>
+            <p>Breinitoch alumni will be global leaders, innovators, and community builders, embodying our values of
+              curiosity, integrity, and service.</p>
+          </div>
+          <div class="vision-image text-center" data-aos="zoom-in" data-aos-delay="200">
+            <img src="assets/img/education/alumni-vision.webp" alt="Alumni Vision" class="img-fluid rounded"
+              style="max-width: 800px;">
+          </div>
+        </div>
+
+        <!-- Notable Alumni (Future-Oriented) -->
         <div class="notable-alumni mt-5">
           <div class="section-header text-center" data-aos="fade-up" data-aos-delay="200">
             <h3>Our Future Alumni</h3>
-            <p>Every Brenitoch student is a future changemaker, innovator, and leader in the making.</p>
+            <p>Every Breinitoch student is a future changemaker, innovator, and leader in the making.</p>
           </div>
 
-          <div class="row">
+          <div class="row gy-4">
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
               <div class="alumni-profile">
                 <div class="profile-header">
@@ -164,9 +170,9 @@
                 </div>
                 <div class="profile-body">
                   <h4>Our Founding Students</h4>
-                  <span class="profile-title">The Pioneers of Brenitoch</span>
+                  <span class="profile-title">The Pioneers of Breinitoch</span>
                   <p>
-                    The first cohort will set the tone for Brenitoch’s culture —
+                    The first cohort will set the tone for Breinitoch’s culture —
                     driven by curiosity, integrity, and a desire to create positive change.
                   </p>
                 </div>
@@ -181,21 +187,21 @@
               <div class="alumni-profile">
                 <div class="profile-header">
                   <div class="profile-img">
-                    <img src="assets/img/person/person-m-7.webp" alt="Teacher Mentor" class="img-fluid">
+                    <img src="assets/img/person/person-m-4.webp" alt="Future Faculty" class="img-fluid">
                   </div>
                   <div class="profile-year">2025</div>
                 </div>
                 <div class="profile-body">
-                  <h4>Mentors and Educators</h4>
-                  <span class="profile-title">Guiding the Next Generation</span>
+                  <h4>Faculty & Mentors</h4>
+                  <span class="profile-title">Shaping Tomorrow's Leaders</span>
                   <p>
-                    Our teachers and mentors form the foundation of Brenitoch’s
-                    lifelong network — shaping students into confident, compassionate leaders.
+                    Our dedicated educators are laying the groundwork for a legacy of excellence,
+                    guiding students to become compassionate and innovative global citizens.
                   </p>
                 </div>
                 <div class="achievement-badge">
-                  <i class="bi bi-mortarboard"></i>
-                  <span>Guiding Lights of Brenitoch</span>
+                  <i class="bi bi-award-fill"></i>
+                  <span>Mentors of Excellence</span>
                 </div>
               </div>
             </div>
@@ -210,10 +216,10 @@
                 </div>
                 <div class="profile-body">
                   <h4>Parents & Supporters</h4>
-                  <span class="profile-title">The Brenitoch Family</span>
+                  <span class="profile-title">The Breinitoch Family</span>
                   <p>
                     Every parent, guardian, and supporter who believes in our mission
-                    is part of the Brenitoch legacy — helping shape a better tomorrow.
+                    is part of the Breinitoch legacy — helping shape a better tomorrow.
                   </p>
                 </div>
                 <div class="achievement-badge">
@@ -225,20 +231,86 @@
           </div>
         </div>
 
+        <!-- Alumni Stories (Placeholder for Future) -->
+        <div class="alumni-stories mt-5">
+          <div class="section-header text-center" data-aos="fade-up" data-aos-delay="100">
+            <h3>Alumni Stories</h3>
+            <p>Hear from our future alumni about their journeys and aspirations.</p>
+          </div>
+          <div class="stories-carousel swiper init-swiper">
+            <script type="application/json" class="swiper-config">
+              {
+                "loop": true,
+                "speed": 600,
+                "autoplay": {
+                  "delay": 5000
+                },
+                "slidesPerView": "auto",
+                "pagination": {
+                  "el": ".swiper-pagination",
+                  "type": "bullets",
+                  "clickable": true
+                },
+                "breakpoints": {
+                  "320": {
+                    "slidesPerView": 1,
+                    "spaceBetween": 20
+                  },
+                  "768": {
+                    "slidesPerView": 2,
+                    "spaceBetween": 30
+                  },
+                  "1200": {
+                    "slidesPerView": 3,
+                    "spaceBetween": 40
+                  }
+                }
+              }
+            </script>
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="story-card" data-aos="fade-up" data-aos-delay="200">
+                  <img src="assets/img/person/person-m-5.webp" alt="Student Story" class="img-fluid rounded mb-3">
+                  <h4>Future Innovator</h4>
+                  <p>"Breinitoch is preparing me to tackle real-world challenges with creativity and confidence."</p>
+                  <span class="story-author">- Alex Kimani, Class of 2026</span>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="story-card" data-aos="fade-up" data-aos-delay="300">
+                  <img src="assets/img/person/person-f-6.webp" alt="Student Story" class="img-fluid rounded mb-3">
+                  <h4>Future Leader</h4>
+                  <p>"The supportive community at Breinitoch is helping me grow into a compassionate leader."</p>
+                  <span class="story-author">- Sarah Mwangi, Class of 2026</span>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="story-card" data-aos="fade-up" data-aos-delay="400">
+                  <img src="assets/img/person/person-m-7.webp" alt="Student Story" class="img-fluid rounded mb-3">
+                  <h4>Future Changemaker</h4>
+                  <p>"I'm excited to contribute to society with the skills I'm gaining at Breinitoch."</p>
+                  <span class="story-author">- David Otieno, Class of 2026</span>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+
         <!-- Engagement Section -->
         <div class="alumni-engagement mt-5">
           <div class="section-header text-center" data-aos="fade-up" data-aos-delay="200">
             <h3>Building a Connected Future</h3>
-            <p>How our students, parents, and partners can shape Brenitoch’s growing legacy.</p>
+            <p>How our students, parents, and partners can shape Breinitoch’s growing legacy.</p>
           </div>
 
           <div class="engagement-cards">
-            <div class="row">
+            <div class="row gy-4">
               <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="engagement-card">
                   <div class="card-icon"><i class="bi bi-people-fill"></i></div>
                   <h4>Become a Founding Partner</h4>
-                  <p>Collaborate with us to create opportunities for our first generation of Brenitoch graduates.</p>
+                  <p>Collaborate with us to create opportunities for our first generation of Breinitoch graduates.</p>
                 </div>
               </div>
 
@@ -246,7 +318,7 @@
                 <div class="engagement-card">
                   <div class="card-icon"><i class="bi bi-calendar-event"></i></div>
                   <h4>Launch Events</h4>
-                  <p>Join us in our early community events and see Brenitoch’s story come to life.</p>
+                  <p>Join us in our early community events and see Breinitoch’s story come to life.</p>
                 </div>
               </div>
 
@@ -269,25 +341,82 @@
           </div>
         </div>
 
+        <!-- Alumni Events Section -->
+        <div class="alumni-events mt-5">
+          <div class="section-header text-center" data-aos="fade-up" data-aos-delay="100">
+            <h3>Upcoming Alumni Events</h3>
+            <p>Stay connected through our exciting events and reunions.</p>
+          </div>
+          <div class="events-list">
+            <div class="row gy-4">
+              <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
+                <div class="event-card">
+                  <img src="assets/img/education/event-1.webp" alt="Alumni Launch Event" class="img-fluid rounded mb-3">
+                  <h4>Alumni Network Launch</h4>
+                  <p>Date: January 15, 2026</p>
+                  <p>Join us for the official launch of the Breinitoch Alumni Network with networking and inspirational
+                    talks.</p>
+                  <a href="events.html" class="btn btn-primary">Learn More</a>
+                </div>
+              </div>
+              <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+                <div class="event-card">
+                  <img src="assets/img/education/event-2.webp" alt="Mentorship Workshop" class="img-fluid rounded mb-3">
+                  <h4>Mentorship Workshop</h4>
+                  <p>Date: March 20, 2026</p>
+                  <p>Connect with mentors and learn how to guide the next generation of Breinitoch students.</p>
+                  <a href="events.html" class="btn btn-primary">Learn More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Connect Form -->
+        <div class="connect-form mt-5" data-aos="fade-up" data-aos-delay="100">
+          <div class="section-header text-center">
+            <h3>Stay Connected</h3>
+            <p>Register your interest to join our alumni community and receive updates.</p>
+          </div>
+          <form action="forms/alumni-register.php" method="post" class="php-email-form">
+            <div class="row gy-3">
+              <div class="col-md-6">
+                <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+              </div>
+              <div class="col-md-6">
+                <input type="email" class="form-control" name="email" placeholder="Your Email" required>
+              </div>
+              <div class="col-md-12">
+                <input type="text" class="form-control" name="expected-graduation"
+                  placeholder="Expected Graduation Year" required>
+              </div>
+              <div class="col-md-12 text-center">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your registration was successful. Thank you!</div>
+                <button type="submit">Register Interest</button>
+              </div>
+            </div>
+          </form>
+        </div>
+
         <!-- Impact Banner -->
         <div class="impact-banner mt-5" data-aos="fade-up" data-aos-delay="200">
           <div class="row align-items-center">
             <div class="col-lg-6">
               <div class="impact-content">
-                <h3>Together, We Build the Brenitoch Legacy</h3>
+                <h3>Together, We Build the Breinitoch Legacy</h3>
                 <p>
-                  The Brenitoch Alumni initiative isn’t just about the past —
+                  The Breinitoch Alumni initiative isn’t just about the past —
                   it’s about creating a lifelong family that supports education, innovation, and community
                   transformation.
                 </p>
-               
               </div>
             </div>
             <div class="col-lg-6">
               <div class="impact-image">
-                <img src="assets/img/education/education-8.webp" alt="Future Brenitoch Students"
+                <img src="assets/img/education/education-8.webp" alt="Future Breinitoch Students"
                   class="img-fluid rounded">
-               
               </div>
             </div>
           </div>
@@ -297,6 +426,8 @@
     </section><!-- /Alumni Section -->
 
   </main>
+
+  <!--Footer details to be added here-->
 
   <footer id="footer" class="footer position-relative dark-background">
     <div class="container footer-top">
@@ -338,6 +469,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Academics</h4>
           <ul>
+            <li><a href="faculty-staff.html">Faculty & Staff</a></li>
             <li><a href="campus-facilities.html">Campus Facilities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="community.html">Community Engagement</a></li>
