--- a/campus-facilities.html
+++ b/campus-facilities.html
@@ -85,7 +85,8 @@
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
         <h1>Campus &amp; Facilities</h1>
-        <p>Discover our modern campus facilities designed to support holistic student development and academic excellence at Breinitoch School.</p>
+        <p>Discover our modern campus facilities designed to support holistic student development and academic
+          excellence at Breinitoch School.</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
@@ -107,7 +108,9 @@
               <div class="intro-content">
                 <h2 class="fw-bold">Experience Our Campus</h2>
                 <p class="lead">Discover state-of-the-art facilities designed to inspire learning and growth</p>
-                <p>Breinitoch School in Juja, Kiambu County, offers a vibrant campus environment with modern facilities that support academic excellence, physical wellness, and community engagement. Our infrastructure is designed to provide students with the best possible learning experience.</p>
+                <p>Breinitoch School in Juja, Kiambu County, offers a vibrant campus environment with modern facilities
+                  that support academic excellence, physical wellness, and community engagement. Our infrastructure is
+                  designed to provide students with the best possible learning experience.</p>
                 <div class="stats-container">
                   <div class="stat-item">
                     <span class="stat-number">120+</span>
@@ -183,7 +186,8 @@
                     </div>
                     <div class="facility-description">
                       <h3>World-Class Learning Spaces</h3>
-                      <p>Our academic facilities at Breinitoch School are designed to foster innovation and collaboration, featuring advanced technology and comfortable learning environments.</p>
+                      <p>Our academic facilities at Breinitoch School are designed to foster innovation and
+                        collaboration, featuring advanced technology and comfortable learning environments.</p>
                       <ul class="feature-list">
                         <li><i class="bi bi-check-circle-fill"></i> Modern classrooms with smart technology</li>
                         <li><i class="bi bi-check-circle-fill"></i> Specialized research laboratories</li>
@@ -200,7 +204,8 @@
                         <i class="bi bi-book-half"></i>
                       </div>
                       <h4>Library</h4>
-                      <p>Our extensive library houses thousands of books and digital resources to support student research and reading.</p>
+                      <p>Our extensive library houses thousands of books and digital resources to support student
+                        research and reading.</p>
                       <span class="info-badge"><i class="bi bi-info-circle"></i> 50k+ Books</span>
                     </div>
 
@@ -224,13 +229,15 @@
                   <div class="facility-highlight">
                     <div class="facility-slider">
                       <div class="facility-slide">
-                        <img src="assets/img/education/facilities/soccer-pitch.jpeg" alt="Sports Complex" class="img-fluid rounded">
+                        <img src="assets/img/education/facilities/soccer-pitch.jpeg" alt="Sports Complex"
+                          class="img-fluid rounded">
                         <div class="slide-caption">Sports Complex</div>
                       </div>
                     </div>
                     <div class="facility-description">
                       <h3>Premier Athletic Facilities</h3>
-                      <p>Breinitoch School's athletic facilities promote physical fitness and team spirit through various sports and recreational activities.</p>
+                      <p>Breinitoch School's athletic facilities promote physical fitness and team spirit through
+                        various sports and recreational activities.</p>
                       <ul class="feature-list">
                         <li><i class="bi bi-check-circle-fill"></i> Multi-purpose sports fields</li>
                         <li><i class="bi bi-check-circle-fill"></i> Indoor gymnasium</li>
@@ -271,13 +278,15 @@
                   <div class="facility-highlight">
                     <div class="facility-slider">
                       <div class="facility-slide">
-                        <img src="assets/img/education/campus-9.webp" alt="Residence Halls" class="img-fluid rounded">
+                        <img src="assets/img/education/facilities/accomodation.jpeg" alt="Residence Halls"
+                          class="img-fluid rounded">
                         <div class="slide-caption">Residence Halls</div>
                       </div>
                     </div>
                     <div class="facility-description">
                       <h3>Comfortable Living Spaces</h3>
-                      <p>Our residential facilities provide safe and comfortable accommodation for students, fostering a sense of community and independence.</p>
+                      <p>Our residential facilities provide safe and comfortable accommodation for students, fostering a
+                        sense of community and independence.</p>
                       <ul class="feature-list">
                         <li><i class="bi bi-check-circle-fill"></i> Modern dormitories</li>
                         <li><i class="bi bi-check-circle-fill"></i> Common lounges</li>
@@ -290,22 +299,20 @@
                 <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
                   <div class="facility-cards">
                     <div class="facility-card">
-                      <img src="assets/img/education/facilities/dining.jpg" alt="Dining Hall" class="img-fluid rounded mb-3">
-                      <div class="icon-container">
-                        <i class="bi bi-egg-fried"></i>
-                      </div>
+                      <img src="assets/img/education/facilities/dinig-hall.jpeg" alt="Dining Hall"
+                        class="img-fluid rounded mb-3">
                       <h4>Dining Halls</h4>
-                      <p>Our dining facilities offer nutritious meals with a variety of options to cater to different dietary needs and preferences.</p>
+                      <p>Our dining facilities offer nutritious meals with a variety of options to cater to different
+                        dietary needs and preferences.</p>
                       <span class="info-badge"><i class="bi bi-info-circle"></i> 4 Halls</span>
                     </div>
 
                     <div class="facility-card">
-                      <img src="assets/img/education/facilities/security.jpg" alt="Security Services" class="img-fluid rounded mb-3">
-                      <div class="icon-container">
-                        <i class="bi bi-shield-lock"></i>
-                      </div>
+                      <img src="assets/img/education/facilities/security.jpeg" alt="Security Services"
+                        class="img-fluid rounded mb-3">
                       <h4>Security Services</h4>
-                      <p>24/7 security ensures a safe environment for all students and staff with CCTV surveillance and on-site personnel.</p>
+                      <p>24/7 security ensures a safe environment for all students and staff with CCTV surveillance and
+                        on-site personnel.</p>
                       <span class="info-badge"><i class="bi bi-info-circle"></i> 24/7 Coverage</span>
                     </div>
                   </div>
@@ -320,13 +327,15 @@
                   <div class="facility-highlight">
                     <div class="facility-slider">
                       <div class="facility-slide">
-                        <img src="assets/img/education/facilities/student-centre.jpeg" alt="Student Center" class="img-fluid rounded">
+                        <img src="assets/img/education/facilities/student-centre.jpeg" alt="Student Center"
+                          class="img-fluid rounded">
                         <div class="slide-caption">Student Center</div>
                       </div>
                     </div>
                     <div class="facility-description">
                       <h3>Vibrant Community Spaces</h3>
-                      <p>Community facilities at Breinitoch School encourage social interaction, cultural activities, and personal development.</p>
+                      <p>Community facilities at Breinitoch School encourage social interaction, cultural activities,
+                        and personal development.</p>
                       <ul class="feature-list">
                         <li><i class="bi bi-check-circle-fill"></i> Student activity center</li>
                         <li><i class="bi bi-check-circle-fill"></i> Art galleries and theaters</li>
@@ -339,19 +348,17 @@
                 <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
                   <div class="facility-cards">
                     <div class="facility-card">
-                      <div class="icon-container">
-                        <i class="bi bi-music-note-beamed"></i>
-                      </div>
-                      <h4>Performance Spaces</h4>
+                      <img src="assets/img/education/athletics/spiritual-life-scripture.jpeg" alt="Dining Hall"
+                        class="img-fluid rounded mb-3">
+                      <h4>Spiritual life</h4>
                       <p>Venues for concerts, plays, and cultural events to showcase student talents.</p>
                       <span class="info-badge"><i class="bi bi-info-circle"></i> 3 Venues</span>
                     </div>
 
                     <div class="facility-card">
-                      <div class="icon-container">
-                        <i class="bi bi-shop"></i>
-                      </div>
-                      <h4>Campus Stores</h4>
+                      <img src="assets/img/education/athletics/arts.jpeg" alt="Dining Hall"
+                        class="img-fluid rounded mb-3">
+                      <h4>School Diversity</h4>
                       <p>Convenient stores for school supplies, snacks, and merchandise.</p>
                       <span class="info-badge"><i class="bi bi-info-circle"></i> 8 Locations</span>
                     </div>
@@ -373,7 +380,8 @@
               </div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
-              <img src="assets/img/education/facilities/student-centre.jpeg" alt="Student Center" class="img-fluid" loading="lazy">
+              <img src="assets/img/education/facilities/student-centre.jpeg" alt="Student Center" class="img-fluid"
+                loading="lazy">
               <div class="gallery-overlay">
                 <h4>Student Center</h4>
               </div>
@@ -385,13 +393,15 @@
               </div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
-              <img src="assets/img/education/facilities/study-areas.jpeg" alt="Study Areas" class="img-fluid" loading="lazy">
+              <img src="assets/img/education/facilities/study-areas.jpeg" alt="Study Areas" class="img-fluid"
+                loading="lazy">
               <div class="gallery-overlay">
                 <h4>Study Areas</h4>
               </div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="500">
-              <img src="assets/img/education/facilities/soccer-pitch.jpeg" alt="Sports Arena" class="img-fluid" loading="lazy">
+              <img src="assets/img/education/facilities/soccer-pitch.jpeg" alt="Sports Arena" class="img-fluid"
+                loading="lazy">
               <div class="gallery-overlay">
                 <h4>Sports Arena</h4>
               </div>
@@ -450,69 +460,75 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative dark-background">
+  <!-- Footer details added here-->
 
+  <footer id="footer" class="footer position-relative dark-background">
     <div class="container footer-top">
       <div class="row gy-4">
+
+        <!-- About / Contact -->
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Brenitoch</span>
+            <img src="assets/img/logoo.png" alt="Brenitoch School Logo">
+            <span class="sitename ms-2">Brenitoch School</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Brenitoch School, Juja</p>
+            <p>Kiambu County, Kenya</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+254 712 345 678</span></p>
+            <p><strong>Email:</strong> <span>info@brenitoch.ac.ke</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-twitter-x"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
+        <!-- Useful Links -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Quick Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="admissions.html">Admissions</a></li>
+            <li><a href="academics.html">Academics</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
 
+        <!-- Academics -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Academics</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="faculty-staff.html">Faculty & Staff</a></li>
+            <li><a href="campus-facilities.html">Campus Facilities</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="community.html">Community Engagement</a></li>
+            <li><a href="news.html">News & Updates</a></li>
           </ul>
         </div>
 
+        <!-- Resources -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
+          <h4>Resources</h4>
           <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="portal.html">Portal Login</a></li>
+            <li><a href="alumni.html">Alumni</a></li>
           </ul>
         </div>
 
+        <!-- Support -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Nobis illum</h4>
+          <h4>Support</h4>
           <ul>
-            <li><a href="#">Ipsam</a></li>
-            <li><a href="#">Laudantium dolorum</a></li>
-            <li><a href="#">Dinera</a></li>
-            <li><a href="#">Trodelas</a></li>
-            <li><a href="#">Flexo</a></li>
+            <li><a href="financial-aid.html">Financial Aid</a></li>
+            <li><a href="career-services.html">Career Services</a></li>
+            <li><a href="student-life.html">Student Life</a></li>
+            <li><a href="employ.html">Employment</a></li>
           </ul>
         </div>
 
@@ -520,17 +536,10 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Breinitoch</strong> <span>All Rights
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch School</strong> <span>All Rights
           Reserved</span></p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-      </div>
-    </div>
 
+    </div>
   </footer>
 
   <!-- Scroll Top -->
