--- a/contact.html
+++ b/contact.html
@@ -2,85 +2,85 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Home - Brenitoch</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Home - Brenitoch</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 
-	<!-- Favicons -->
-	<link href="assets/img/logoo.png" rel="icon">
-	<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- Favicons -->
+  <link href="assets/img/logoo.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-	<!-- Fonts -->
-	<link href="https://fonts.googleapis.com" rel="preconnect">
-	<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-		rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
-	<!-- Vendor CSS Files -->
-	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-	<link href="assets/vendor/aos/aos.css" rel="stylesheet">
-	<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-	<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
-	<!-- Main CSS File -->
-	<link href="assets/css/main.css" rel="stylesheet">
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
 
 </head>
 
 <body class="contact-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
-		<div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-			<a href="index.html" class="logo d-flex align-items-center">
-				<!-- Uncomment the line below if you also wish to use an image logo -->
-				<img src="assets/img/logoo.png" alt="School Logo">
-			</a>
+      <a href="index.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <img src="assets/img/logoo.png" alt="School Logo">
+      </a>
 
-			<nav id="navmenu" class="navmenu">
-				<ul>
-					<li><a href="index.html" class="active">Home</a></li>
-					<li class="dropdown"><a href="about.html"><span>About</span> <i
-								class="bi bi-chevron-down toggle-dropdown"></i></a>
-						<ul>
-							<li><a href="about.html">About Us</a></li>
-							<li><a href="students-life.html">Student Life</a></li>
-							<li><a href="faculty-staff.html">Faculty &amp; Staff</a></li>
-							<li><a href="campus-facilities.html">Co-curricular Programs</a></li>
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li class="dropdown"><a href="about.html"><span>About</span> <i
+                class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="students-life.html">Student Life</a></li>
+              <li><a href="faculty-staff.html">Faculty &amp; Staff</a></li>
+              <li><a href="campus-facilities.html">Co-curricular Programs</a></li>
 
-						</ul>
-					</li>
+            </ul>
+          </li>
 
-					<li><a href="admissions.html">Admissions</a></li>
-					<li><a href="academics.html">Academics</a></li>
-					<li><a href="events.html">Events</a></li>
-					<li><a href="alumni.html">Alumni</a></li>
-					<li><a href="employ.html">Employment</a></li>
-					<li class="dropdown"><a href="#"><span>More Pages</span> <i
-								class="bi bi-chevron-down toggle-dropdown"></i></a>
-						<ul>
-							<li><a href="news-details.html">Career Services</a></li>
-							<li><a href="news-details.html">Blog</a></li>
-							<li><a href="event-details.html">Student Accommodation Info</a></li>
-							<li><a href="privacy.html">Financial Aid and Scholarships</a></li>
-							<li><a href="terms-of-service.html">Portal Login</a></li>
-							<li><a href="community.html">Community Engagement</a></li>
-							<li><a href="news.html">News</a></li>
-							<li><a href="feedback.html">Feedback and Surveys</a></li>
-						</ul>
-					</li>
+          <li><a href="admissions.html">Admissions</a></li>
+          <li><a href="academics.html">Academics</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="alumni.html">Alumni</a></li>
+          <li><a href="employ.html">Employment</a></li>
+          <li class="dropdown"><a href="#"><span>More Pages</span> <i
+                class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="news-details.html">Career Services</a></li>
+              <li><a href="news-details.html">Blog</a></li>
+              <li><a href="event-details.html">Student Accommodation Info</a></li>
+              <li><a href="privacy.html">Financial Aid and Scholarships</a></li>
+              <li><a href="terms-of-service.html">Portal Login</a></li>
+              <li><a href="community.html">Community Engagement</a></li>
+              <li><a href="news.html">News</a></li>
+              <li><a href="feedback.html">Feedback and Surveys</a></li>
+            </ul>
+          </li>
 
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-				<i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-			</nav>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
 
-		</div>
-	</header>
+    </div>
+  </header>
 
   <main class="main">
 
@@ -88,7 +88,8 @@
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
         <h1>Contact</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
+        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
+          molestias.</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
@@ -148,7 +149,10 @@
 
       <!-- Google Maps (Full Width) -->
       <div class="map-section" data-aos="fade-up" data-aos-delay="200">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus"
+          width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
       <!-- Contact Form Section (Overlapping) -->
@@ -191,7 +195,8 @@
                     <div class="form-group">
                       <div class="input-with-icon">
                         <i class="bi bi-chat-dots message-icon"></i>
-                        <textarea class="form-control" name="message" placeholder="Write Message..." style="height: 180px" required=""></textarea>
+                        <textarea class="form-control" name="message" placeholder="Write Message..."
+                          style="height: 180px" required=""></textarea>
                       </div>
                     </div>
                   </div>
@@ -217,69 +222,74 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative dark-background">
+  <!--To add Footer contents here-->
 
+  <footer id="footer" class="footer position-relative dark-background">
     <div class="container footer-top">
       <div class="row gy-4">
+
+        <!-- About / Contact -->
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">NiceSchool</span>
+            <img src="assets/img/logoo.png" alt="Brenitoch School Logo">
+            <span class="sitename ms-2">Brenitoch School</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Brenitoch School, Juja</p>
+            <p>Kiambu County, Kenya</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+254 712 345 678</span></p>
+            <p><strong>Email:</strong> <span>info@brenitoch.ac.ke</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-twitter-x"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
+        <!-- Useful Links -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Quick Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="admissions.html">Admissions</a></li>
+            <li><a href="academics.html">Academics</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
 
+        <!-- Academics -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Academics</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="campus-facilities.html">Campus Facilities</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="community.html">Community Engagement</a></li>
+            <li><a href="news.html">News & Updates</a></li>
           </ul>
         </div>
 
+        <!-- Resources -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
+          <h4>Resources</h4>
           <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="portal.html">Portal Login</a></li>
+            <li><a href="alumni.html">Alumni</a></li>
           </ul>
         </div>
 
+        <!-- Support -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Nobis illum</h4>
+          <h4>Support</h4>
           <ul>
-            <li><a href="#">Ipsam</a></li>
-            <li><a href="#">Laudantium dolorum</a></li>
-            <li><a href="#">Dinera</a></li>
-            <li><a href="#">Trodelas</a></li>
-            <li><a href="#">Flexo</a></li>
+            <li><a href="financial-aid.html">Financial Aid</a></li>
+            <li><a href="career-services.html">Career Services</a></li>
+            <li><a href="student-life.html">Student Life</a></li>
+            <li><a href="employ.html">Employment</a></li>
           </ul>
         </div>
 
@@ -287,20 +297,15 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">MyWebsite</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch School</strong> <span>All Rights
+          Reserved</span></p>
 
+    </div>
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
