Quick Links - Stephen

--- a/alumni.html
+++ b/alumni.html
@@ -49,7 +49,6 @@
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="students-life.html">Student Life</a></li>
-              <li><a href="faculty-staff.html">Faculty &amp; Staff</a></li>
               <li><a href="campus-facilities.html">Campus Facilities</a></li>
             </ul>
           </li>
@@ -58,13 +57,13 @@
           <li><a href="events.html">Events</a></li>
           <li><a href="alumni.html" class="active">Alumni</a></li>
           <li><a href="employ.html">Employment</a></li>
-          <li class="dropdown"><a href="#"><span>More Pages</span> <i
+          <li class="dropdown"><a href="#"><span>Quick Links</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="news-details.html">Career Services</a></li>
+              <li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
               <li><a href="news-details.html">Blog</a></li>
               <li><a href="event-details.html">Student Accommodation Info</a></li>
-              <li><a href="privacy.html">Financial Aid and Scholarships</a></li>
+              <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
               <li><a href="terms-of-service.html">Portal Login</a></li>
               <li><a href="community.html">Community Engagement</a></li>
               <li><a href="news.html">News</a></li>
@@ -492,7 +491,7 @@
           <h4>Support</h4>
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
-            <li><a href="career-services.html">Career Services</a></li>
+            <li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
             <li><a href="student-life.html">Student Life</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
