--- a/academics.html
+++ b/academics.html
@@ -56,13 +56,13 @@
           <li><a href="events.html">Events</a></li>
           <li><a href="alumni.html">Alumni</a></li>
           <li><a href="employ.html">Employment</a></li>
-          <li class="dropdown"><a href="#"><span>More Pages</span> <i
+          <li class="dropdown"><a href="#"><span>Quick Links</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="news-details.html">Career Services</a></li>
+              <li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
               <li><a href="news-details.html">Blog</a></li>
               <li><a href="event-details.html">Student Accommodation Info</a></li>
-              <li><a href="privacy.html">Financial Aid and Scholarships</a></li>
+              <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
               <li><a href="terms-of-service.html">Portal Login</a></li>
               <li><a href="community.html">Community Engagement</a></li>
               <li><a href="news.html">News</a></li>
@@ -604,7 +604,7 @@
           <h4>Support</h4>
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
-            <li><a href="career-services.html">Career Services</a></li>
+            <li><a href="policies-doc.html">Business plan &amp; school polices</a></li>
             <li><a href="student-life.html">Student Life</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
